// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders correctly 1`] = `
<DocumentFragment>
  .cache-1yrf4lq-StyledTable {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

.cache-6z2yke-StyledHead {
  border-bottom: 1px solid #d4dae7;
}

.cache-1wx805j-StyledRow {
  color: #4a4f62;
}

.cache-1wx805j-StyledRow a {
  color: inherit;
}

.cache-1wx805j-StyledRow [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.cache-1wx805j-StyledRow:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.cache-17yd00x-StyledHeadCell-sharedCellStyle {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  color: #b2b6c3;
  text-align: left;
  padding: 8px 16px;
  font-size: 14px;
  line-height: 20px;
}

.cache-jzptjg-StyledTBody[data-striped='true'] .efhaznt5:nth-of-type(even) {
  background-color: #f6f6f8;
}

.cache-s0ztax-StyledBodyCell-sharedCellStyle {
  overflow: hidden;
  white-space: nowrap;
  padding: 8px 16px;
  font-size: 14px;
  line-height: 20px;
}

<table
    class="cache-1yrf4lq-StyledTable efhaznt7"
  >
    <thead
      class="cache-6z2yke-StyledHead efhaznt6"
    >
      <tr
        class="cache-1wx805j-StyledRow efhaznt5"
      >
        <th
          class="cache-17yd00x-StyledHeadCell-sharedCellStyle efhaznt4"
        >
          ID
        </th>
        <th
          class="cache-17yd00x-StyledHeadCell-sharedCellStyle efhaznt4"
        >
          Status
        </th>
        <th
          class="cache-17yd00x-StyledHeadCell-sharedCellStyle efhaznt4"
        >
          Date
        </th>
      </tr>
    </thead>
    <tbody
      class="cache-jzptjg-StyledTBody efhaznt0"
      data-striped="false"
    >
      <tr
        class="cache-1wx805j-StyledRow efhaznt5"
      >
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          165
        </td>
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          Ongoing
        </td>
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          Yesterday
        </td>
      </tr>
      <tr
        class="cache-1wx805j-StyledRow efhaznt5"
      >
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          56
        </td>
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          Resolved
        </td>
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          1 hour ago
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Table renders correctly while loading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    left: -25%;
  }

  to {
    left: 100%;
  }
}

.cache-1yrf4lq-StyledTable {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

.cache-6z2yke-StyledHead {
  border-bottom: 1px solid #d4dae7;
}

.cache-1wx805j-StyledRow {
  color: #4a4f62;
}

.cache-1wx805j-StyledRow a {
  color: inherit;
}

.cache-1wx805j-StyledRow [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.cache-1wx805j-StyledRow:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.cache-17yd00x-StyledHeadCell-sharedCellStyle {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  color: #b2b6c3;
  text-align: left;
  padding: 8px 16px;
  font-size: 14px;
  line-height: 20px;
}

.cache-jzptjg-StyledTBody[data-striped='true'] .efhaznt5:nth-of-type(even) {
  background-color: #f6f6f8;
}

.cache-15mp5sh-StyledRow-StyledLoadingRow {
  color: #4a4f62;
  cursor: progress;
}

.cache-15mp5sh-StyledRow-StyledLoadingRow a {
  color: inherit;
}

.cache-15mp5sh-StyledRow-StyledLoadingRow [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.cache-15mp5sh-StyledRow-StyledLoadingRow:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.cache-s0ztax-StyledBodyCell-sharedCellStyle {
  overflow: hidden;
  white-space: nowrap;
  padding: 8px 16px;
  font-size: 14px;
  line-height: 20px;
}

.cache-1prxobb-StyledContainer-StyledSkeleton {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
  cursor: progress;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-1r88wor-Line {
  height: 12px;
  width: 120px;
  max-width: 100%;
  border-radius: 10px;
  background-color: #d4dae7;
}

.cache-q3qai6-StyledDiv {
  position: absolute;
  top: 0;
  height: 100%;
  width: 25%;
  opacity: 0.8;
  background: linear-gradient(
      90deg,
      #ffffff00,
      #ffffff4D,
      #ffffff66,
      #ffffff4D,
      #ffffff00
    );
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
}

@media (prefers-reduced-motion: reduce) {
  .cache-q3qai6-StyledDiv {
    -webkit-animation: unset;
    animation: unset;
  }
}

<table
    class="cache-1yrf4lq-StyledTable efhaznt7"
  >
    <thead
      class="cache-6z2yke-StyledHead efhaznt6"
    >
      <tr
        class="cache-1wx805j-StyledRow efhaznt5"
      >
        <th
          class="cache-17yd00x-StyledHeadCell-sharedCellStyle efhaznt4"
        >
          ID
        </th>
        <th
          class="cache-17yd00x-StyledHeadCell-sharedCellStyle efhaznt4"
        >
          Date
        </th>
      </tr>
    </thead>
    <tbody
      class="cache-jzptjg-StyledTBody efhaznt0"
      data-striped="false"
    >
      <tr
        class="efhaznt2 cache-15mp5sh-StyledRow-StyledLoadingRow efhaznt5"
      >
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          <div
            class="efhaznt1 cache-1prxobb-StyledContainer-StyledSkeleton e181dehd1"
          >
            <div
              class="cache-1r88wor-Line e16zi9h40"
            />
            <div
              class="cache-q3qai6-StyledDiv e181dehd0"
            />
          </div>
        </td>
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          <div
            class="efhaznt1 cache-1prxobb-StyledContainer-StyledSkeleton e181dehd1"
          >
            <div
              class="cache-1r88wor-Line e16zi9h40"
            />
            <div
              class="cache-q3qai6-StyledDiv e181dehd0"
            />
          </div>
        </td>
      </tr>
      <tr
        class="efhaznt2 cache-15mp5sh-StyledRow-StyledLoadingRow efhaznt5"
      >
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          <div
            class="efhaznt1 cache-1prxobb-StyledContainer-StyledSkeleton e181dehd1"
          >
            <div
              class="cache-1r88wor-Line e16zi9h40"
            />
            <div
              class="cache-q3qai6-StyledDiv e181dehd0"
            />
          </div>
        </td>
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          <div
            class="efhaznt1 cache-1prxobb-StyledContainer-StyledSkeleton e181dehd1"
          >
            <div
              class="cache-1r88wor-Line e16zi9h40"
            />
            <div
              class="cache-q3qai6-StyledDiv e181dehd0"
            />
          </div>
        </td>
      </tr>
      <tr
        class="efhaznt2 cache-15mp5sh-StyledRow-StyledLoadingRow efhaznt5"
      >
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          <div
            class="efhaznt1 cache-1prxobb-StyledContainer-StyledSkeleton e181dehd1"
          >
            <div
              class="cache-1r88wor-Line e16zi9h40"
            />
            <div
              class="cache-q3qai6-StyledDiv e181dehd0"
            />
          </div>
        </td>
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          <div
            class="efhaznt1 cache-1prxobb-StyledContainer-StyledSkeleton e181dehd1"
          >
            <div
              class="cache-1r88wor-Line e16zi9h40"
            />
            <div
              class="cache-q3qai6-StyledDiv e181dehd0"
            />
          </div>
        </td>
      </tr>
      <tr
        class="efhaznt2 cache-15mp5sh-StyledRow-StyledLoadingRow efhaznt5"
      >
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          <div
            class="efhaznt1 cache-1prxobb-StyledContainer-StyledSkeleton e181dehd1"
          >
            <div
              class="cache-1r88wor-Line e16zi9h40"
            />
            <div
              class="cache-q3qai6-StyledDiv e181dehd0"
            />
          </div>
        </td>
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          <div
            class="efhaznt1 cache-1prxobb-StyledContainer-StyledSkeleton e181dehd1"
          >
            <div
              class="cache-1r88wor-Line e16zi9h40"
            />
            <div
              class="cache-q3qai6-StyledDiv e181dehd0"
            />
          </div>
        </td>
      </tr>
      <tr
        class="efhaznt2 cache-15mp5sh-StyledRow-StyledLoadingRow efhaznt5"
      >
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          <div
            class="efhaznt1 cache-1prxobb-StyledContainer-StyledSkeleton e181dehd1"
          >
            <div
              class="cache-1r88wor-Line e16zi9h40"
            />
            <div
              class="cache-q3qai6-StyledDiv e181dehd0"
            />
          </div>
        </td>
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          <div
            class="efhaznt1 cache-1prxobb-StyledContainer-StyledSkeleton e181dehd1"
          >
            <div
              class="cache-1r88wor-Line e16zi9h40"
            />
            <div
              class="cache-q3qai6-StyledDiv e181dehd0"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Table renders correctly with striped body 1`] = `
<DocumentFragment>
  .cache-1yrf4lq-StyledTable {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

.cache-6z2yke-StyledHead {
  border-bottom: 1px solid #d4dae7;
}

.cache-1wx805j-StyledRow {
  color: #4a4f62;
}

.cache-1wx805j-StyledRow a {
  color: inherit;
}

.cache-1wx805j-StyledRow [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.cache-1wx805j-StyledRow:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.cache-17yd00x-StyledHeadCell-sharedCellStyle {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  color: #b2b6c3;
  text-align: left;
  padding: 8px 16px;
  font-size: 14px;
  line-height: 20px;
}

.cache-jzptjg-StyledTBody[data-striped='true'] .efhaznt5:nth-of-type(even) {
  background-color: #f6f6f8;
}

.cache-s0ztax-StyledBodyCell-sharedCellStyle {
  overflow: hidden;
  white-space: nowrap;
  padding: 8px 16px;
  font-size: 14px;
  line-height: 20px;
}

<table
    class="cache-1yrf4lq-StyledTable efhaznt7"
  >
    <thead
      class="cache-6z2yke-StyledHead efhaznt6"
    >
      <tr
        class="cache-1wx805j-StyledRow efhaznt5"
      >
        <th
          class="cache-17yd00x-StyledHeadCell-sharedCellStyle efhaznt4"
        >
          ID
        </th>
        <th
          class="cache-17yd00x-StyledHeadCell-sharedCellStyle efhaznt4"
        >
          Status
        </th>
        <th
          class="cache-17yd00x-StyledHeadCell-sharedCellStyle efhaznt4"
        >
          Date
        </th>
      </tr>
    </thead>
    <tbody
      class="cache-jzptjg-StyledTBody efhaznt0"
      data-striped="true"
    >
      <tr
        class="cache-1wx805j-StyledRow efhaznt5"
      >
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          165
        </td>
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          Ongoing
        </td>
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          Yesterday
        </td>
      </tr>
      <tr
        class="cache-1wx805j-StyledRow efhaznt5"
      >
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          56
        </td>
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          Resolved
        </td>
        <td
          class="cache-s0ztax-StyledBodyCell-sharedCellStyle efhaznt3"
        >
          1 hour ago
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
